--- a/src/app/modal/modal/modal.component.html
+++ b/src/app/modal/modal/modal.component.html
@@ -1,5 +1,5 @@
-<section class="p-4">
-  <div>
+<section>
+  <div class="p-4">
     @if (user) {
     <p>First Name: {{ user.firstName }}</p>
     <hr />
@@ -8,8 +8,9 @@
     <p>Body Size: {{ user.bodySize }}</p>
     <hr />
     <p>Description: {{ user.description }}</p>
-    }@else{
-    <p>User does not exist</p>
     }
+  </div>
+  <div class="modalButton mb-3">
+    <button (click)="exitModal()">close</button>
   </div>
 </section>
