made few changes to the modal component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,6 @@
   </ng-template> -->
 
   <ng-template #viewUserTemplate>
-    <app-modal [user]="user" , [exitModal]="exitModal()" />
+    <app-modal [user]="user" [exitModal]="exitModal" />
   </ng-template>
 </section>
