--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 
   <!-- modal section -->
   <!-- <ng-template #viewUserTemplate>
-    <div class="p-4">
+    <div class="p-4 text-dark">
       @if (user) {
       <p>First Name: {{ user.firstName }}</p>
       <hr />
