--- a/src/app/modal/modal/modal.component.html
+++ b/src/app/modal/modal/modal.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="p-4">
+  <div class="p-4 text-dark">
     @if (user) {
     <p>First Name: {{ user.firstName }}</p>
     <hr />
