--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: rgb(145, 158, 184);
+  background-color: rgb(6, 12, 67);
+  color: white;
 }
